tests/ui/suggestions/box-future-wrong-output.stderr
error: hi
  --> $DIR/box-future-wrong-output.rs:9:1
   |
LL | impl<T: ?Sized> FutureExt for T where T: Future {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ overlaps with this blanket impl
LL | trait FutureExt: Future {
   | ----------------------- built-in `dyn FutureExt<Output = _>` implementation for this trait
   |
   = note: `#[forbid(dyn_overlap)]` on by default

error[E0308]: mismatched types
  --> $DIR/box-future-wrong-output.rs:20:39
   |
LL |     let _: BoxFuture<'static, bool> = async {}.boxed();
   |            ------------------------   ^^^^^^^^^^^^^^^^ expected `Pin<Box<...>>`, found `Pin<Box<dyn Future<Output = ()> + Send>>`
   |            |
   |            expected due to this
   |
   = note: expected struct `Pin<Box<(dyn Future<Output = bool> + Send + 'static)>>`
              found struct `Pin<Box<dyn Future<Output = ()> + Send>>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
